Fixed size overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+  box-sizing: border-box;
+}
+
 html {
   width: 100%;
   scroll-behavior: smooth;
 }
 body{
   background: black;
+}
+
+html,body{
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .input-border {
